microservices/service-1/kubernetes-config/api_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    apigateway.ingress.kubernetes.io/client-arns: arn:aws:iam::212285161954:user/parikpanchal
    apigateway.ingress.kubernetes.io/stage-name: dev
    kubernetes.io/ingress.class: apigateway
  name: api-95d8427d
  namespace: default
spec:
  rules:
    - http:
        paths:
          - path: /service/info
            backend:
              serviceName: service-1
              servicePort: 80
          - path: /ping
            backend:
              serviceName: service-1
              servicePort: 80
          - path: /orders/create
            backend:
              serviceName: service-1
              servicePort: 80
          - path: /orders/get
            backend:
              serviceName: service-1
              servicePort: 80
